syntax = "proto3";

package banking;

option java_multiple_files = true;
//option java_package = "com.demo.banking";

message AccountRequest {
  string account_number = 1;
}

message AccountBalanceResponse {
  string account_number = 1;
  double balance = 2;
}

service AccountBalanceService {
  rpc GetAccountBalance (AccountRequest) returns (AccountBalanceResponse) {}
}